css/styles.css
:root {
   --white: hsl(0, 0%, 100%);
   --slate-300: hsl(212, 45%, 89%);
   --slate-500: hsl(216, 15%, 48%);
   --slate-900: hsl(218, 44%, 22%);
}
html {
   font-size: 62.5%;       /* 1. 1rem = 10px      */
   box-sizing: border-box; /* 1. reset box model  */
}
*, *:before, *:after {     /* 2. reset box model   */
   box-sizing: inherit;    /* 3. reset box model   */
   margin: 0;
   padding: 0;
} 
body {
   font-size: 16px;        /* 2. 1rem = 10px      */
   font-family: "Outfit", serif;
   background-color: var(--slate-300);
}
.container {
   max-width: 144rem;
   height: 100vh;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
}
.card {
   background-color: var(--white);
   padding: 1.6rem;
   padding-bottom: 4rem;
   width: 32rem;
   height: 49.9rem;
   border-radius: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
}
.card img {
   width: 100%;
   border-radius: 1rem;
}
.card-content {
   width: 100%;
   display: flex;
   flex-direction: column;
   text-align: center;
   gap: 1.6rem;
}
.card-content h3 {
   color: var(--slate-900);
   font-weight: 700;
   line-height: 120%;
   letter-spacing: 0;
}
.card-content p {
   color: var(--slate-500);
   font-weight: 400;
   line-height: 140%;
   letter-spacing: 0.2px;
}

